objects/Product_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Quantity_for_OnOrder__c</fullName>
        <formula>IF(OR(TEXT(Transaction_Type__c) =&quot;Issue&quot;,TEXT(Transaction_Type__c) =&quot;Correction&quot;,TEXT(Transaction_Type__c) =&quot;Initial Balance&quot;),0,
IF(TEXT(Transaction_Type__c) =&quot;Receipt&quot;, 0-Quantity__c,Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quantity for OnOrder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Quantity_for_Onhand__c</fullName>
        <formula>IF(TEXT(Transaction_Type__c) =&quot;On Order&quot;,0,
IF(TEXT(Transaction_Type__c) =&quot;Issue&quot;, 0-Quantity__c,Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quantity for Onhand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kit_Type__c</fullName>
        <formula>Product_Transaction_Summary__r.Kit_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnOrder__c</fullName>
        <formula>OR(TEXT(Transaction_Type__c) =&quot;On Order&quot;,
TEXT(Transaction_Type__c) =&quot;Receipt&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onhand__c</fullName>
        <formula>OR(TEXT(Transaction_Type__c) =&quot;Initial Balance&quot;,
TEXT(Transaction_Type__c) =&quot;Issue&quot;,
TEXT(Transaction_Type__c) =&quot;Receipt&quot;,
TEXT(Transaction_Type__c) =&quot;Correction&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onhand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Transaction_Summary__c</fullName>
        <label>Product Transaction Summary</label>
        <referenceTo>Product_Transaction_Summary__c</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receive_Parts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Balance</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PT - Product Transactions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Product_Transaction_Summary__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Product Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>